# WebScraping_with_BeautifulSoup_and_Flask_MediumTutorial

./: main.py  pyproject.toml
templates/: index.html
